Got Facebook fullName

--- a/Taskly/Base.lproj/Main.storyboard
+++ b/Taskly/Base.lproj/Main.storyboard
@@ -313,6 +313,18 @@
                                     <action selector="performLogout:" destination="6ED-uk-49a" eventType="touchUpInside" id="2Fb-D7-ObH"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Current User:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EoJ-IA-7dG">
+                                <rect key="frame" x="138" y="114" width="103" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="userLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OvU-8e-4sL">
+                                <rect key="frame" x="95" y="143" width="173" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -320,6 +332,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Account" selectedImage="first" id="2xN-iP-WjJ"/>
+                    <connections>
+                        <outlet property="userLabel" destination="OvU-8e-4sL" id="fb7-So-odT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rPr-QW-oyY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
